[package]
name = "hako"
version = "0.0.0"
rust-version = "1.56.0"
edition = "2021"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Monospaced text layouts using composable blocks."
repository = "https://github.com/olson-sean-k/hako"
readme = "README.md"
license = "MIT"
keywords = [
    "layout",
    "terminal",
    "text"
]

[dependencies]
itertools = "^0.11.0"
unicode-segmentation = "^1.8.0"
unicode-width = "^0.1.0"

[dev-dependencies]

[dev-dependencies.colored]
package = "owo-colors"
version = "^3.0.0"
